# my-first-axum-api

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sql
queries/: users.sql
src/: cornucopia.rs  main.rs
