[package]
name = "axum_wasm_postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7"
cornucopia = "0.3"
dotenv = "0.15"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
tracing-subscriber = "0.3"
tracing = "0.1"
